--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,20 +14,14 @@ jobs:
                 name: Checkout
                 uses: actions/checkout@v3
             - # login to Docker Hub using the secrets provided
-                name: Login to Docker Hub
-                uses: docker/login-action@v2
-                with:
+                name: Docker login
+                env:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_PROVIDERTOKEN }}
-            - # create a build kit builder instance
-                name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v2
-            - # build the container image and push it to Docker \
-                # Hub with the name clockbox.
-                name: Build and push
-                uses: docker/build-push-action@v4
-                with:
-                  context: .
-                  file: ./Dockerfile
-                  push: true
-                  tags: deepyad76/openjdk8:latest
+                run: docker login -u $username -p $password
+            - # create the image
+                name: Build image
+                run: docker build . --file base_OpenJDK8/Dockerfile --tag deepyad76/openjdk8:latest 
+            - # build the container image and push it to Docker Hub 
+                name: Push image
+                run: docker push deepyad76/openjdk8:latest
